Fixed FireBallPower #5